# lambda-trim

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
ltrim/debloat/: __init__.py  debloat.py  process.py  stats.py  utils.py
ltrim/delta/: __init__.py  delta.py  driver.py  utils.py
ltrim/moduify/: __init__.py  moduifier.py  utils.py
ltrim/profiler/: __init__.py  profiler.py  tracker.py
ltrim/transformers/: __init__.py  ast_transformers.py
ltrim/utils/: __init__.py  constants.py  stats.py
