[project]
name = "ltrim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.1.1",
    "psutil>=6.1.1",
    "pycg>=0.0.8",
    "ruff>=0.9.2",
]

[project.scripts]
debloat = "ltrim.debloat:main"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
